--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,16 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "Keijiro",
+      "url": "https://registry.npmjs.com",
+      "scopes": [
+        "jp.keijiro"
+      ]
+    }
+  ],
   "dependencies": {
-    "com.unity.render-pipelines.universal": "12.1.15",
-    "com.unity.visualeffectgraph": "12.1.15"
+    "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.visualeffectgraph": "17.0.3",
+    "jp.keijiro.vfxgraphassets": "3.0.0"
   }
 }
